Styles fixes for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
-  padding-top: 50px;
+  padding: 50px 20px;
+  overflow: hidden;
 }
 
 .App-link {
